--- a/scss/_component.divider.scss
+++ b/scss/_component.divider.scss
@@ -8,7 +8,7 @@
   background-color: color('brand');
 
   @include grid-media($neat-grid-medium) {
-    @include grid-column(3);
+    @include grid-column(1);
   }
 
   @include grid-media($neat-grid-large) {
