--- a/scss/_component.hero.scss
+++ b/scss/_component.hero.scss
@@ -3,7 +3,7 @@
 }
 
 .hero__text-unit {
-  @include grid-column(5);
+  @include grid-column(7);
   padding-bottom: $space-xl;
 
   @include grid-media($neat-grid-medium) {
