--- a/scss/_settings.project.scss
+++ b/scss/_settings.project.scss
@@ -28,10 +28,10 @@ $modular-scale-ratio: $root-scaling-ratio;
 
 // Bourbon Neat
 $neat-grid: (
-  columns: 5,
+  columns: 7,
   gutter: $root-space,
 );
-// Use 2-3 Column configurations
+// Use 3-4 Column configurations
 
 $neat-grid-medium: (
   columns: 11,
